# anchore-syft-wheel

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py  syft_version.cmake
.github/workflows/: build.yml  syft-update-autocheck.yml
src/anchore_syft/: __init__.py
