[build-system]
requires = ["setuptools>=63", "wheel", "scikit-build", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "cp39-*"
before-all = [
    "pipx install -f cmake==3.21.4",
    "cmake --version",
]
test-command = [
  "syft version",
  "syft help",
]

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux1"
manylinux-i686-image = "manylinux1"

[project]
name = "anchore_syft"
description = "CLI tool for generating a Software Bill of Materials from container images and filesystems"
readme = "README.md"
keywords = ["anchore", "syft", "sbom"]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Security",
    "Topic :: Utilities",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/anchore/syft"
download_url = "https://github.com/anchore/syft/releases"
"Source Code" = "https://github.com/nightlark/anchore-syft-wheel"
"Bug Tracker" = "https://github.com/nightlark/anchore-syft-wheel/issues"

[project.scripts]
syft = "anchore_syft:syft"
anchore_syft = "anchore_syft:syft"

#[tool.setuptools.packages.find]
#where = ["src"]  # list of folders that contain the packages (["."] by default)

#[tool.setuptools.package-data]
#syft = ["syft*"]

[tool.setuptools_scm]
write_to = "src/anchore_syft/_version.py"
